syntax="proto3";

package user;
option go_package ="mygin-restful/proto/user";

import "google/protobuf/timestamp.proto";

message User{
    uint64 id=1;
    string username=2;
    string email=3;
    string nickname=4;
    google.protobuf.Timestamp created_at=5;
    google.protobuf.Timestamp updated_at=6;
    // Password is not exposed
}

message GetUserRequest{
    uint64 user_id=1;
}

message ListUsersRequest{
    int32 page=1;
    int32 page_size=2;
}

message ListUsersResponse{
    repeated User users=1;
    int64 total=2;
    int32 page=3;
    int32 page_size=4;
}

service UserService{
    rpc GetUser(GetUserRequest) returns (User){}
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
}